--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="/css/style.css" type="text/css" />
   </head>
   <body>
-    <div class="outer-square"></div>
+    <div class="outer-square">
+      <div class="inner-square"></div>
+    </div>
   </body>
 </html>
