--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <title>Document</title>
     <link rel="stylesheet" href="/css/style.css" type="text/css" />
   </head>
-  <body>
-    <div class="outer-square">
-      <div class="inner-square"></div>
+  <body class="color-primary center-v1 greta-background">
+    <div class="outer-square thick-border-2 center-v1 greta-background">
+      <div class="inner-square thick-border-2 center-v1 greta-background">
+        <div
+          class="inner-inner-square thick-border-2 color-primary center-v1 greta-background"
+        ></div>
+      </div>
     </div>
   </body>
 </html>
